<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="horizontal"
    android:paddingBottom="12dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="12dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:background="@drawable/bg_ctrl"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_up_year"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:theme="@style/CustomButton.GREEN2" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_down_year"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:theme="@style/CustomButton.RED2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="@dimen/hint_font_size"
            android:paddingRight="4dp"
            android:paddingBottom="12dp"
            android:textColor="@color/textColorHint"
            android:text="@string/str_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lyt_year"
                style="@style/CustomTextInput"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:padding="0dp"
                app:hintTextAppearance="@style/CustomTextAppearance">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_year"
                    style="@style/CustomEditText"
                    android:gravity="center"
                    android:hint="@string/str_year"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lyt_month"
                style="@style/CustomTextInput"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:padding="0dp"
                app:hintTextAppearance="@style/CustomTextAppearance">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_month"
                    style="@style/CustomEditText"
                    android:gravity="center"
                    android:hint="@string/str_month"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:background="@drawable/bg_ctrl"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_up_month"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:theme="@style/CustomButton.GREEN" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_down_month"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:theme="@style/CustomButton.RED" />

    </LinearLayout>

</LinearLayout>