<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FragmentCalculate">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_result"
        style="@style/CustomCardView"
        android:layout_marginTop="@dimen/result_top_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_selector">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:src="@null"
                app:fabSize="mini" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_saving"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingRight="3dp"
                    android:gravity="right"
                    android:textSize="@dimen/hint_font_size"
                    android:text="@string/str_monthly_deposit"
                    android:textColor="@color/cardview_dark_background" />

                <TextView
                    android:id="@+id/txt_output"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingTop="2dp"
                    android:textSize="@dimen/font_size"
                    android:textColor="@color/cardview_dark_background" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/result_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="end"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_goal"
                style="@style/CustomCardView"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lyt_goal"
                    style="@style/CustomTextInput"
                    app:hintTextAppearance="@style/CustomTextAppearance">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_goal"
                        style="@style/CustomEditText"
                        android:hint="@string/str_goal" />
                </android.support.design.widget.TextInputLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_current"
                style="@style/CustomCardView">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lyt_current"
                    style="@style/CustomTextInput"
                    app:hintTextAppearance="@style/CustomTextAppearance">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edt_current"
                        style="@style/CustomEditText"
                        android:hint="@string/str_current" />
                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_profit"
                style="@style/CustomCardView">

                <ir.Parka.keychi.view.CustomEditText
                    android:id="@+id/edt_profit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_inflation"
                style="@style/CustomCardView">

                <ir.Parka.keychi.view.CustomEditText
                    android:id="@+id/edt_inflation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_yearmonth"
                style="@style/CustomCardView">

                <ir.Parka.keychi.view.CustomMonthYear
                    android:id="@+id/edt_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </android.support.v7.widget.CardView>



        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
